--- a/src/Cms.WebMvc/Cms.WebMvc.csproj
+++ b/src/Cms.WebMvc/Cms.WebMvc.csproj
@@ -6,6 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
     <ItemGroup>
       <ProjectReference Include="..\Cms.Application\Cms.Application.csproj" />
     </ItemGroup>
